--- a/VE_Conductor/Makefile.conductorlib
+++ b/VE_Conductor/Makefile.conductorlib
@@ -61,7 +61,9 @@ endif
 SRCS=\
    interface.cpp \
    package.cpp \
-	string_ops.cpp 
+	string_ops.cpp \
+	GeometryDataManager.cpp \
+	GeometryDataBuffer.cpp
 			
 # -----------------------------------------------------------------------------
 # following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
