--- a/VE_Conductor/Makefile.guipluginlib
+++ b/VE_Conductor/Makefile.guipluginlib
@@ -61,6 +61,9 @@ endif
 SRCS=\
    FinancialDialog.cpp \
    Geometry.cpp \
+	GeometryDialog.cpp \
+	GeometryDataBuffer.cpp \
+	GeometryDataManager.cpp \
 	ListTable.cpp \
    Plugin_base.cpp \
    PortDialog.cpp \
