add more header files to specific projects

--- a/VE_Conductor/VE_ConductorLib.vcproj
+++ b/VE_Conductor/VE_ConductorLib.vcproj
@@ -188,6 +188,9 @@
 			<File
 				RelativePath=".\Framework\GeometryDataManager.h">
 			</File>
+			<File
+				RelativePath=".\Framework\interface.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
