updates for formating an removing pf style function calls.

--- a/VE_Xplorer/VE_XplorerLib.vcproj
+++ b/VE_Xplorer/VE_XplorerLib.vcproj
@@ -425,6 +425,9 @@
 			Name="headers"
 			Filter=".h">
 			<File
+				RelativePath=".\cfdEnum.h">
+			</File>
+			<File
 				RelativePath=".\cfdSoundHandler.h">
 			</File>
 		</Filter>
