--- a/VE_Builder/Utilities/mk/meshViewer/meshViewer.vcproj
+++ b/VE_Builder/Utilities/mk/meshViewer/meshViewer.vcproj
@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="VE_UtilLib_tao_osg_d.lib  vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib vtkHybrid.lib vrj_d.lib vpr_d.lib"
+				AdditionalDependencies="VE_UtilLib_d.lib  vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib vtkHybrid.lib vrj_d.lib vpr_d.lib"
 				OutputFile="$(OutDir)/meshViewer.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
