changed all the project files to get deps libs from dependencies in the solution and not from the input line.

--- a/VE_Builder/Utilities/mk/makeVtkSurface/makeVtkSurface.vcproj
+++ b/VE_Builder/Utilities/mk/makeVtkSurface/makeVtkSurface.vcproj
@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="VE_UtilLib_d.lib vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib vtkHybrid.lib"
+				AdditionalDependencies="vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib vtkHybrid.lib"
 				OutputFile="$(OutDir)/makeVtkSurface.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;"
