unix build update for texture creator

--- a/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
@@ -25,6 +25,7 @@ DEBUG_APP?= TRUE
 #OPTIM_APP?= TRUE
 
 EXTRA_CFLAGS+= 
+EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_UtilLib
 
 
 LINKALL_ON= -all
