vcproj for Graphical Plugins

--- a/VE_Conductor/UIWizard/TEMPLATE.vcproj
+++ b/VE_Conductor/UIWizard/TEMPLATE.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="Equipment_GUI2"
+	Name="Template_GUI"
 	ProjectGUID="{0D29C965-1C45-4EB3-8421-302A1D2F4548}"
 	SccProjectName=""
 	SccLocalPath="">
