--- a/VE_Xplorer/Makefile.xplorerlib
+++ b/VE_Xplorer/Makefile.xplorerlib
@@ -102,7 +102,8 @@ SRCS=\
    cfdVector.cxx \
    cfdVectors.cxx \
    cfdRawNodeWriteTraverser.cxx \
-   cfdWriteTraverser.cxx
+   cfdWriteTraverser.cxx \
+   cfdObjectHandler.cxx
 
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME) 
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Builder/Translator
