adding cfdObjectHandler.cxx to the windows project.

--- a/VE_Xplorer/VE_XplorerLib.vcproj
+++ b/VE_Xplorer/VE_XplorerLib.vcproj
@@ -352,6 +352,9 @@
 				RelativePath=".\cfdNavigate.cxx">
 			</File>
 			<File
+				RelativePath=".\cfdObjectHandler.cxx">
+			</File>
+			<File
 				RelativePath=".\cfdObjects.cxx">
 			</File>
 			<File
