removed singleton from the geom gui code. the new way of doing things needs to be tested but it should work fine. please report any bugs that are encountered.

--- a/VE_Conductor/GUIPluginLib.vcproj
+++ b/VE_Conductor/GUIPluginLib.vcproj
@@ -153,6 +153,12 @@
 			</File>
 			<File
 				RelativePath=".\Framework\GeometryDataManager.cpp">
+				<FileConfiguration
+					Name="dbg|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\Framework\GeometryDialog.cpp">
