cleaned up build env

--- a/VE_Conductor/UIWizard/TEMPLATEGraphicalPlugin.vcproj
+++ b/VE_Conductor/UIWizard/TEMPLATEGraphicalPlugin.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="TEMPLATE"
+	Name="TEMPLATEGraphicalPlugin"
 	ProjectGUID="{BABE88BF-50EE-4E66-84BB-7B801E9FD01F}"
 	RootNamespace="VE_Xplorer"
 	SccProjectName=""
@@ -152,20 +152,19 @@
 				AdditionalOptions="/Zm800"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(OSGHOME)\..\OpenThreads\include&quot;;&quot;$(OSGHOME)\include&quot;;./;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(VE_SUITE_HOME)\VESOpen\skel&quot;;&quot;$(VE_SUITE_HOME)&quot;"
-				PreprocessorDefinitions="_DEBUG;_OSG;VTK44;TABLET;WIN32;_CONSOLE;_WIN32;_WINDOWS;_MT;__WXDEBUG__;WXUSINGDLL;_TAO"
+				PreprocessorDefinitions="_DEBUG;_OSG;VTK44;WIN32;_CONSOLE;_WIN32;_WINDOWS;__WXDEBUG__;WXUSINGDLL;_TAO"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				RuntimeTypeInfo="TRUE"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderFile=".\Debug/VE_Xplorer.pch"
+				UsePrecompiledHeader="0"
+				PrecompiledHeaderFile=""
 				AssemblerListingLocation=".\$(ConfigurationName)/"
 				ObjectFile=".\$(ConfigurationName)/"
 				ProgramDataBaseFileName=".\$(ConfigurationName)/"
 				WarningLevel="3"
 				SuppressStartupBanner="TRUE"
-				DebugInformationFormat="2"
-				CompileAs="0"
-				DisableSpecificWarnings="4244;4251;4275;4290"/>
+				DebugInformationFormat="3"
+				CompileAs="0"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
@@ -233,4 +232,3 @@
 	<Globals>
 	</Globals>
 </VisualStudioProject>
-
