bug fix for recent commit of new debug code.

--- a/VE_Xplorer/VE_XplorerLib.vcproj
+++ b/VE_Xplorer/VE_XplorerLib.vcproj
@@ -428,6 +428,9 @@
 			Name="headers"
 			Filter=".h">
 			<File
+				RelativePath=".\cfdDebug.h">
+			</File>
+			<File
 				RelativePath=".\cfdEnum.h">
 			</File>
 			<File
