--- a/VE_Xplorer/Makefile.xplorer
+++ b/VE_Xplorer/Makefile.xplorer
@@ -113,40 +113,26 @@ include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 # following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
 
 ifeq ($(CLUSTER_APP), TRUE)
-   APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/project_cluster$(EXEC_TAG)$(OSG)
+   APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/project$(EXEC_TAG)$(OSG)$(PATENTED_TAG)_cluster
    EXTRA_CXXFLAGS+= -D_CLUSTER
    # object files are being stored in a system-dependent directory so that
    # builds for multiple platforms may be maintained simultaneously.
 
    #OBJDIR is the place that the object files are stored.
-   OBJDIR= $(CFDHOSTTYPE)_cluster$(EXEC_TAG)$(OSG)
+   OBJDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)$(PATENTED_TAG)_cluster
 
    #DEPDIR is the place that the dependency files are stored.
-   DEPDIR= $(CFDHOSTTYPE)_cluster$(EXEC_TAG)$(OSG)
-   ifeq ($(VE_PATENTED), TRUE)
-      #OBJDIR is the place that the object files are stored.
-      OBJDIR= $(CFDHOSTTYPE)_cluster$(EXEC_TAG)$(OSG)_patented
-
-      #DEPDIR is the place that the dependency files are stored.
-      DEPDIR= $(CFDHOSTTYPE)_cluster$(EXEC_TAG)$(OSG)_patented
-   endif
+   DEPDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)$(PATENTED_TAG)_cluster
 else
-   APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/project$(EXEC_TAG)$(OSG)
+   APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/project$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
    # object files are being stored in a system-dependent directory so that builds
    # for multiple platforms may be maintained simultaneously.
 
    #OBJDIR is the place that the object files are stored.
-   OBJDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)
+   OBJDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
 
    #DEPDIR is the place that the dependency files are stored.
-   DEPDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)
-   ifeq ($(VE_PATENTED), TRUE)
-      #OBJDIR is the place that the object files are stored.
-      OBJDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)_patented
-
-      #DEPDIR is the place that the dependency files are stored.
-      DEPDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)_patented
-   endif
+   DEPDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
 endif
 
 default: all
