new changes for new layout of default results panel

--- a/VE_Conductor/Makefile.guipluginlib
+++ b/VE_Conductor/Makefile.guipluginlib
@@ -69,6 +69,7 @@ SRCS=\
    PortDialog.cpp \
    ResultPanel.cpp \
    StringParse.cpp \
+   SummaryResultDialog.cpp \
    TexTable.cpp \
    TextResultDialog.cpp \
    UIDialog.cpp
