--- a/examples/Mult_UnitsSample/AdiabaticFlameTemp/AdiabaticFlameTempUnit/AdiabaticFlameTempUnit.vcproj
+++ b/examples/Mult_UnitsSample/AdiabaticFlameTemp/AdiabaticFlameTempUnit/AdiabaticFlameTempUnit.vcproj
@@ -53,9 +53,7 @@
 				MkTypLibCompatible="FALSE"
 				TypeLibraryName="$(IntDir)/$(ProjectName).tlb"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
